--- a/esp4a/src/app/app.component.css
+++ b/esp4a/src/app/app.component.css
@@ -1,38 +1,53 @@
-.example-form {
-    min-width: 150px;
-    max-width: 500px;
+.contenedor{
+    display: block;
+    background: rgb(233, 162, 40);
+    position: absolute;
     width: 100%;
-    color: white;
-  }
-  .subtitulos{
-    color: white;
-    
-  }
-  
-  .example-full-width {
-    width: 100%;
-    
-  }
-  
-  
-  input.example-right-align::-webkit-outer-spin-button,
-  input.example-right-align::-webkit-inner-spin-button {
-    display: none;
-  }
-  
-  input.example-right-align {
-    -moz-appearance: textfield;
-  }
-  
-.div{
-    background-color:rgba(37, 37, 37, 0.639);
-    width: 600px;
-    height: 600px;
-   
-    margin-left: auto;
-     margin-right: auto;
-   
+    box-sizing: border-box;
 }
+
+.logo{
+    width: 200px;
+    height: 87px;
+    padding: 10px;
+    position: relative;
+    left: 10%;
+}
+
+.contenedorBoton{
+    float: right;
+}
+
+
+
+button{
+    width: 70px;
+    height: 40px;
+    display: block;
+    margin: 10px;
+    color: #fff;
+}
+
+.btnEncender{
+    background: rgba(50, 67, 223, 0.795);
+}
+
+.btnApagar{
+    background: rgba(187, 42, 42, 0.795);
+}
+
 body{
-    background-color: rgba(0, 0, 255, 0.558);
+    padding: 0;
+    margin: 0;
+    background: rgba(51, 51, 51, 0.897);
+}
+
+label{
+    font-size: 50px;
+    color: #fff;
+}
+
+div,header{
+    margin: 0;
+    padding: 0;
 }
